--- a/tutorial01.ipynb
+++ b/tutorial01.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using LinearAlgebra, Plots, LaTeXStrings; pyplot();"
+    "using LinearAlgebra, Plots, LaTeXStrings, Printf; pyplot();"
    ]
   },
   {
@@ -220,7 +220,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.000005 seconds (3 allocations: 304 bytes)\n"
+      "  0.000004 seconds (3 allocations: 304 bytes)\n"
      ]
     }
    ],
@@ -297,6 +297,63 @@
    "source": [
     "@time matrixnncal(3,x,w,b);"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_old = 0.0;\n",
+    "x_new = 6.0;\n",
+    "γ = 0.01;\n",
+    "precision = 0.00001;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df(x) = 4.0*x^3 - 9.0*x^2;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "while abs(x_new - x_old) > precision\n",
+    "    x_old = x_new;\n",
+    "    x_new = x_new - γ*df(x_old);\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The local minimum occurs at 2.250\n"
+     ]
+    }
+   ],
+   "source": [
+    "@printf \"The local minimum occurs at %0.3f\\n\" x_new"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
