--- a/tutorial02.ipynb
+++ b/tutorial02.ipynb
@@ -423,23 +423,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#p = plot(x_vals,y_vals,legend=false);\n",
-    "#anim = @animate for i ∈ 1:nrow(DF2)\n",
-    "#    plot!(p,DF2[1:i,1],DF2[1:i,2],m=:dot);\n",
+    "#p = plot(x_vals,y_vals,legend=false,title=L\"\\alpha = 0.1\");\n",
+    "#anim = @animate for i ∈ 1:nrow(DF1)\n",
+    "#    plot!(p,DF1[1:i,1],DF1[1:i,2],m=:dot);\n",
     "#end\n",
-    "#gif(anim, \"anim_fps10.gif\", fps = 10);"
+    "#gif(anim, \"anim_fps10_01.gif\", fps = 10);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#p = plot(x_vals,y_vals,legend=false,title=L\"\\alpha = 0.6\");\n",
+    "#anim = @animate for i ∈ 1:nrow(DF2)\n",
+    "#    plot!(p,DF2[1:i,1],DF2[1:i,2],m=:dot);\n",
+    "#end\n",
+    "#gif(anim, \"anim_fps10_02.gif\", fps = 10);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#p = plot(x_vals,y_vals,legend=false,title=L\"\\alpha = 0.8\");\n",
+    "#anim = @animate for i ∈ 1:nrow(DF3)\n",
+    "#    plot!(p,DF3[1:i,1],DF3[1:i,2],m=:dot);\n",
+    "#end\n",
+    "#gif(anim, \"anim_fps10_03.gif\", fps = 10);"
+   ]
   }
  ],
  "metadata": {
