--- a/tutorial04.ipynb
+++ b/tutorial04.ipynb
@@ -23,28 +23,10 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "┌ Info: Precompiling DataFrames [a93c6f00-e57d-5684-b7b6-d8193f3e46c0]\n",
-      "└ @ Base loading.jl:1278\n",
-      "┌ Info: Precompiling Plots [91a5bcdd-55d7-5caf-9e0b-520d859cae80]\n",
-      "└ @ Base loading.jl:1278\n",
-      "┌ Info: Precompiling StatsPlots [f3b207a7-027a-5e70-b257-86293d7955fd]\n",
-      "└ @ Base loading.jl:1278\n",
-      "┌ Info: Precompiling PyCall [438e738f-606a-5dbb-bf0a-cddfbfd45ab0]\n",
-      "└ @ Base loading.jl:1278\n",
-      "┌ Info: Precompiling MLDataUtils [cc2ba9b6-d476-5e6d-8eaf-a92d5412d41d]\n",
-      "└ @ Base loading.jl:1278\n",
-      "┌ Info: Precompiling PyPlot [d330b81b-6aea-500a-939a-2ce795aea3ee]\n",
-      "└ @ Base loading.jl:1278\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "using LinearAlgebra, DataFrames, Plots, StatsPlots, LaTeXStrings, PyCall, StatsBase, MLDataUtils; pyplot();\n",
+    "using LinearAlgebra, DataFrames, Plots, StatsPlots, LaTeXStrings; pyplot();\n",
+    "using PyCall, Statistics, StatsBase, MLDataUtils;\n",
     "\n",
     "include(\"nntutorial.jl\");"
    ]
@@ -258,7 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fulldatascale = fit(ZScoreTransform, digits[\"data\"]; dims=2, center=true, scale=true);\n",
+    "fulldatascale = fit(ZScoreTransform, digits[\"data\"]; center=true, scale=true);\n",
     "X = StatsBase.transform(fulldatascale,digits[\"data\"]);"
    ]
   },
@@ -286,9 +268,46 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "64-element Array{Float64,1}:\n",
+       "  0.0\n",
+       "  0.0\n",
+       "  5.0\n",
+       " 13.0\n",
+       "  9.0\n",
+       "  1.0\n",
+       "  0.0\n",
+       "  0.0\n",
+       "  0.0\n",
+       "  0.0\n",
+       " 13.0\n",
+       " 15.0\n",
+       " 10.0\n",
+       "  ⋮\n",
+       " 10.0\n",
+       " 12.0\n",
+       "  0.0\n",
+       "  0.0\n",
+       "  0.0\n",
+       "  0.0\n",
+       "  6.0\n",
+       " 13.0\n",
+       " 10.0\n",
+       "  0.0\n",
+       "  0.0\n",
+       "  0.0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "(x_train,y_train), (x_test,y_test) = splitobs((X', digits[\"target\"]), at = 0.6);"
+    "digits[\"data\"][1, :]"
    ]
   },
   {
@@ -299,7 +318,33 @@
     {
      "data": {
       "text/plain": [
-       "(64, 1078)"
+       "64-element Array{Float64,1}:\n",
+       " -0.8793149034293518\n",
+       " -0.8793149034293518\n",
+       "  0.07776254248014676\n",
+       "  1.6090864559353444\n",
+       "  0.8434244992077455\n",
+       " -0.687899414247452\n",
+       " -0.8793149034293518\n",
+       " -0.8793149034293518\n",
+       " -0.8793149034293518\n",
+       " -0.8793149034293518\n",
+       "  1.6090864559353444\n",
+       "  1.9919174342991437\n",
+       "  1.0348399883896453\n",
+       "  ⋮\n",
+       "  1.0348399883896453\n",
+       "  1.4176709667534446\n",
+       " -0.8793149034293518\n",
+       " -0.8793149034293518\n",
+       " -0.8793149034293518\n",
+       " -0.8793149034293518\n",
+       "  0.26917803166204646\n",
+       "  1.6090864559353444\n",
+       "  1.0348399883896453\n",
+       " -0.8793149034293518\n",
+       " -0.8793149034293518\n",
+       " -0.8793149034293518"
       ]
      },
      "execution_count": 14,
@@ -308,7 +353,7 @@
     }
    ],
    "source": [
-    "size(x_train)"
+    "X[1, :]"
    ]
   },
   {
@@ -319,7 +364,7 @@
     {
      "data": {
       "text/plain": [
-       "(64, 719)"
+       "-3.122502256758253e-17"
       ]
      },
      "execution_count": 15,
@@ -328,7 +373,7 @@
     }
    ],
    "source": [
-    "size(x_test)"
+    "mean(X[1,:])"
    ]
   },
   {
@@ -339,10 +384,79 @@
     {
      "data": {
       "text/plain": [
-       "(1078,)"
+       "0.9999999999999999"
       ]
      },
      "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "std(X[1,:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(x_train,y_train), (x_test,y_test) = splitobs((X', digits[\"target\"]), at = 0.6);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(64, 1078)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "size(x_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(64, 719)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "size(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1078,)"
+      ]
+     },
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +476,7 @@
        "(719,)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +533,7 @@
        "1"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +563,7 @@
        " 0.0"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +609,7 @@
        " 2.2230981877111518"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
