--- a/tutorial04.ipynb
+++ b/tutorial04.ipynb
@@ -240,7 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fulldatascale = fit(ZScoreTransform, digits[\"data\"]; center=true, scale=true);\n",
+    "fulldatascale = fit(ZScoreTransform, digits[\"data\"],dims=1; center=true, scale=true);\n",
     "X = StatsBase.transform(fulldatascale,digits[\"data\"]);"
    ]
   },
@@ -319,32 +319,32 @@
      "data": {
       "text/plain": [
        "64-element Array{Float64,1}:\n",
-       " -0.8793149034293518\n",
-       " -0.8793149034293518\n",
-       "  0.07776254248014676\n",
-       "  1.6090864559353444\n",
-       "  0.8434244992077455\n",
-       " -0.687899414247452\n",
-       " -0.8793149034293518\n",
-       " -0.8793149034293518\n",
-       " -0.8793149034293518\n",
-       " -0.8793149034293518\n",
-       "  1.6090864559353444\n",
-       "  1.9919174342991437\n",
-       "  1.0348399883896453\n",
-       "  ⋮\n",
-       "  1.0348399883896453\n",
-       "  1.4176709667534446\n",
-       " -0.8793149034293518\n",
-       " -0.8793149034293518\n",
-       " -0.8793149034293518\n",
-       " -0.8793149034293518\n",
-       "  0.26917803166204646\n",
-       "  1.6090864559353444\n",
-       "  1.0348399883896453\n",
-       " -0.8793149034293518\n",
-       " -0.8793149034293518\n",
-       " -0.8793149034293518"
+       " NaN\n",
+       "  -0.33492325878805623\n",
+       "  -0.043069029109717966\n",
+       "   0.27399525202861885\n",
+       "  -0.6642926016787297\n",
+       "  -0.8438944820720514\n",
+       "  -0.40960990281505144\n",
+       "  -0.12498813188874437\n",
+       "  -0.059061117002451896\n",
+       "  -0.6238356128858208\n",
+       "   0.4828400969954889\n",
+       "   0.7594110633517563\n",
+       "  -0.058409604319378854\n",
+       "   ⋮\n",
+       "   0.11009908693312889\n",
+       "   0.537461555837553\n",
+       "  -0.7572250303913418\n",
+       "  -0.20972674790990398\n",
+       "  -0.023589892481053584\n",
+       "  -0.29899811837308815\n",
+       "   0.0866945575958979\n",
+       "   0.2082346133387899\n",
+       "  -0.3666691579949807\n",
+       "  -1.1463283667812885\n",
+       "  -0.5055290846700855\n",
+       "  -0.19595297364240172"
       ]
      },
      "execution_count": 14,
@@ -364,7 +364,7 @@
     {
      "data": {
       "text/plain": [
-       "-3.122502256758253e-17"
+       "NaN"
       ]
      },
      "execution_count": 15,
@@ -384,7 +384,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9999999999999999"
+       "NaN"
       ]
      },
      "execution_count": 16,
@@ -581,32 +581,32 @@
      "data": {
       "text/plain": [
        "1078-element Array{Float64,1}:\n",
-       " 1.9919174342991437\n",
-       " 0.9370068551349345\n",
-       " 1.6736624134992053\n",
-       " 0.33835483231223834\n",
-       " 0.5224865316318857\n",
-       " 1.650407315929595\n",
-       " 1.8075297284041183\n",
-       " 0.43111069629626425\n",
-       " 1.3435010388782969\n",
-       " 1.7177903181033538\n",
-       " 1.9467904224642174\n",
-       " 0.0023619633166184952\n",
-       " 1.781068622503486\n",
-       " ⋮\n",
-       " 0.34784433370406526\n",
-       " 0.6062267956642258\n",
-       " 0.49574187017977445\n",
-       " 0.7657869623602034\n",
-       " 1.436697859205049\n",
-       " 1.4111762395962588\n",
-       " 0.69911780557633\n",
-       " 0.7550951784433814\n",
-       " 0.6481644303320097\n",
-       " 1.0947938776730426\n",
-       " 1.718847084775173\n",
-       " 2.2230981877111518"
+       "  0.7594110633517563\n",
+       " -0.24623498001088642\n",
+       "  1.010822574192417\n",
+       " -1.5032925342141898\n",
+       " -1.2518810233735291\n",
+       "  1.010822574192417\n",
+       "  1.010822574192417\n",
+       " -1.2518810233735291\n",
+       "  0.5079995525110956\n",
+       "  1.010822574192417\n",
+       "  1.010822574192417\n",
+       " -1.7547040450548506\n",
+       "  0.5079995525110956\n",
+       "  ⋮\n",
+       " -1.2518810233735291\n",
+       " -0.7490580016922078\n",
+       " -1.2518810233735291\n",
+       " -0.24623498001088642\n",
+       "  0.5079995525110956\n",
+       "  1.010822574192417\n",
+       " -1.0004695125328684\n",
+       " -0.7490580016922078\n",
+       " -1.0004695125328684\n",
+       "  0.0051765308297742575\n",
+       "  1.010822574192417\n",
+       "  0.7594110633517563"
       ]
      },
      "execution_count": 26,
