--- a/tutorial03.ipynb
+++ b/tutorial03.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1m Activating\u001b[22m\u001b[39m environment at `~/Documents/GitHub/NNtutorial/Project.toml`\n"
+      "\u001b[32m\u001b[1m Activating\u001b[22m\u001b[39m environment at `~/Dropbox/My Mac (FGH100303M09.local)/Documents/GitHub/NNtutorial/Project.toml`\n"
      ]
     }
    ],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -36,6 +36,33 @@
     "using LinearAlgebra, DataFrames, Plots, StatsPlots, LaTeXStrings; pyplot();\n",
     "\n",
     "include(\"nntutorial.jl\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$f(x) = \\frac{1}{1+e^{-x}}$\n",
+       "\n"
+      ],
+      "text/markdown": [
+       "$f(x) = \\frac{1}{1+e^{-x}}$\n"
+      ],
+      "text/plain": [
+       "  \u001b[35mf(x) = \\frac{1}{1+e^{-x}}\u001b[39m"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "?nntutorial.factivate"
    ]
   },
   {
