--- a/tutorial04.ipynb
+++ b/tutorial04.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1m Activating\u001b[22m\u001b[39m environment at `~/Documents/GitHub/NNtutorial/Project.toml`\n"
+      "\u001b[32m\u001b[1m Activating\u001b[22m\u001b[39m environment at `~/Dropbox/My Mac (FGH100303M09.local)/Documents/GitHub/NNtutorial/Project.toml`\n"
      ]
     }
    ],
@@ -21,12 +21,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: replacing module nntutorial.\n"
+     ]
+    }
+   ],
    "source": [
     "using LinearAlgebra, DataFrames, Plots, StatsPlots, LaTeXStrings; pyplot();\n",
-    "using PyCall, Statistics, StatsBase, MLDataUtils;\n",
+    "using Random, PyCall, Statistics, StatsBase, MLDataUtils;\n",
     "\n",
     "include(\"nntutorial.jl\");"
    ]
@@ -616,6 +624,71 @@
    ],
    "source": [
     "x_train[12,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nn_structure = (64,30,10);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "setup_init_weights (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function setup_init_weights(nn_structure)\n",
+    "    W = Dict();\n",
+    "    b = Dict();\n",
+    "    for l = 2:length(nn_structure)\n",
+    "        push!(W,string(l)=>randn(nn_structure[l],nn_structure[l-1]))\n",
+    "        push!(b,string(l)=>randn(nn_structure[l]))\n",
+    "    end\n",
+    "    return W, b\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "init_tri_values (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function init_tri_values(nn_structure)\n",
+    "    tri_W = Dict();\n",
+    "    tri_b = Dict();\n",
+    "    for l = 2:length(nn_structure)\n",
+    "        push!(tri_W,string(l)=>zeros(nn_structure[l],nn_structure[l-1]))\n",
+    "        push!(tri_b,string(l)=>zeros(nn_structure[l]))\n",
+    "    end\n",
+    "    return tri_W, tri_b\n",
+    "end"
    ]
   },
   {
