--- a/tutorial04.ipynb
+++ b/tutorial04.ipynb
@@ -21,17 +21,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: replacing module nntutorial.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "using LinearAlgebra, DataFrames, Plots, StatsPlots, LaTeXStrings; pyplot();\n",
     "using Random, PyCall, Statistics, StatsBase, MLDataUtils;\n",
@@ -628,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +638,7 @@
        "setup_init_weights (generic function with 1 method)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,8 +648,8 @@
     "    W = Dict();\n",
     "    b = Dict();\n",
     "    for l = 2:length(nn_structure)\n",
-    "        push!(W,string(l)=>randn(nn_structure[l],nn_structure[l-1]))\n",
-    "        push!(b,string(l)=>randn(nn_structure[l]))\n",
+    "        push!(W,l=>randn(nn_structure[l],nn_structure[l-1]))\n",
+    "        push!(b,l=>randn(nn_structure[l]))\n",
     "    end\n",
     "    return W, b\n",
     "end"
@@ -665,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +666,7 @@
        "init_tri_values (generic function with 1 method)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,10 +676,35 @@
     "    tri_W = Dict();\n",
     "    tri_b = Dict();\n",
     "    for l = 2:length(nn_structure)\n",
-    "        push!(tri_W,string(l)=>zeros(nn_structure[l],nn_structure[l-1]))\n",
-    "        push!(tri_b,string(l)=>zeros(nn_structure[l]))\n",
+    "        push!(tri_W,l=>zeros(nn_structure[l],nn_structure[l-1]))\n",
+    "        push!(tri_b,l=>zeros(nn_structure[l]))\n",
     "    end\n",
     "    return tri_W, tri_b\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "feed_forward (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function feed_forward(x, W, b)\n",
+    "    h = Dict(1=>x);\n",
+    "    z = Dict();\n",
+    "    \n",
+    "    return h, z\n",
     "end"
    ]
   },
