--- a/tutorial04.ipynb
+++ b/tutorial04.ipynb
@@ -685,7 +685,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f(x) = nntutorial.factivate(x);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -694,17 +703,79 @@
        "feed_forward (generic function with 1 method)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "function feed_forward(x, W, b)\n",
-    "    h = Dict(1=>x);\n",
+    "    h = Dict(2=>x);\n",
     "    z = Dict();\n",
-    "    \n",
+    "    node_in = 0.0;\n",
+    "    for l = 2:length(keys(W))+1\n",
+    "        if 1 == 2\n",
+    "            node_in = x;\n",
+    "        else\n",
+    "            node_in = h[l];\n",
+    "        end\n",
+    "        z[l+1] = W[l]*node_in .+ b[l];\n",
+    "        h[l+1] = f.(z[l+1]);\n",
+    "    end\n",
     "    return h, z\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f′(x) = nntutorial.factivateprime(x);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "calculate_out_layer_delta (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function calculate_out_layer_delta(y,h_out,z_out)\n",
+    "    return -(y .- h_out).*f′.(z_out)\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "calculate_hidden_delta (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function calculate_hidden_delta(delta_plus_1,w_l,z_l)\n",
+    "    return w_l'*delta_plus_1 .* f′.(z_l)\n",
     "end"
    ]
   },
