--- a/tutorial04.ipynb
+++ b/tutorial04.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1m Activating\u001b[22m\u001b[39m environment at `~/Dropbox/My Mac (FGH100303M09.local)/Documents/GitHub/NNtutorial/Project.toml`\n"
+      "\u001b[32m\u001b[1m Activating\u001b[22m\u001b[39m environment at `~/Documents/GitHub/NNtutorial/Project.toml`\n"
      ]
     }
    ],
@@ -32,12 +32,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "skldg = pyimport(\"sklearn.datasets\");"
+    "skldg = pyimport(\"sklearn.datasets\"); # import data import function from python"
    ]
   },
   {
@@ -46,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "digits = skldg.load_digits();"
+    "digits = skldg.load_digits(); # load the data"
    ]
   },
   {
@@ -73,6 +80,7 @@
     }
    ],
    "source": [
+    "# here is what is in the data\n",
     "digits"
    ]
   },
@@ -101,6 +109,7 @@
     }
    ],
    "source": [
+    "# let's examine a single image\n",
     "digits[\"images\"][1,:,:]"
    ]
   },
@@ -119,6 +128,7 @@
     }
    ],
    "source": [
+    "# visualization \n",
     "heatmap(digits[\"images\"][1,:,:], color = :greys)"
    ]
   },
@@ -139,6 +149,7 @@
     }
    ],
    "source": [
+    "# show the value of first digit\n",
     "digits[\"target\"][1]"
    ]
   },
@@ -185,6 +196,7 @@
     }
    ],
    "source": [
+    "# show the pixel values for the first digit\n",
     "digits[\"data\"][1,:]"
    ]
   },
@@ -231,6 +243,7 @@
     }
    ],
    "source": [
+    "# full set of pixel values, each row is a different image\n",
     "digits[\"data\"]"
    ]
   },
@@ -240,8 +253,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fulldatascale = fit(ZScoreTransform, digits[\"data\"],dims=1; center=true, scale=true);\n",
-    "X = StatsBase.transform(fulldatascale,digits[\"data\"]);"
+    "# normalize the data\n",
+    "X = standardize(ZScoreTransform, digits[\"data\"], dims=1);\n",
+    "function remove_nans(x)\n",
+    "    if isnan(x)\n",
+    "        return 0.0\n",
+    "    else \n",
+    "        return x\n",
+    "    end\n",
+    "end\n",
+    "X = remove_nans.(X);"
    ]
   },
   {
@@ -319,32 +340,32 @@
      "data": {
       "text/plain": [
        "64-element Array{Float64,1}:\n",
-       " NaN\n",
-       "  -0.33492325878805623\n",
-       "  -0.043069029109717966\n",
-       "   0.27399525202861885\n",
-       "  -0.6642926016787297\n",
-       "  -0.8438944820720514\n",
-       "  -0.40960990281505144\n",
-       "  -0.12498813188874437\n",
-       "  -0.059061117002451896\n",
-       "  -0.6238356128858208\n",
-       "   0.4828400969954889\n",
-       "   0.7594110633517563\n",
-       "  -0.058409604319378854\n",
-       "   ⋮\n",
-       "   0.11009908693312889\n",
-       "   0.537461555837553\n",
-       "  -0.7572250303913418\n",
-       "  -0.20972674790990398\n",
-       "  -0.023589892481053584\n",
-       "  -0.29899811837308815\n",
-       "   0.0866945575958979\n",
-       "   0.2082346133387899\n",
-       "  -0.3666691579949807\n",
-       "  -1.1463283667812885\n",
-       "  -0.5055290846700855\n",
-       "  -0.19595297364240172"
+       "  0.0\n",
+       " -0.33492325878805623\n",
+       " -0.043069029109717966\n",
+       "  0.27399525202861885\n",
+       " -0.6642926016787297\n",
+       " -0.8438944820720514\n",
+       " -0.40960990281505144\n",
+       " -0.12498813188874437\n",
+       " -0.059061117002451896\n",
+       " -0.6238356128858208\n",
+       "  0.4828400969954889\n",
+       "  0.7594110633517563\n",
+       " -0.058409604319378854\n",
+       "  ⋮\n",
+       "  0.11009908693312889\n",
+       "  0.537461555837553\n",
+       " -0.7572250303913418\n",
+       " -0.20972674790990398\n",
+       " -0.023589892481053584\n",
+       " -0.29899811837308815\n",
+       "  0.0866945575958979\n",
+       "  0.2082346133387899\n",
+       " -0.3666691579949807\n",
+       " -1.1463283667812885\n",
+       " -0.5055290846700855\n",
+       " -0.19595297364240172"
       ]
      },
      "execution_count": 14,
@@ -364,7 +385,7 @@
     {
      "data": {
       "text/plain": [
-       "NaN"
+       "-0.0157130590095214"
       ]
      },
      "execution_count": 15,
@@ -384,7 +405,7 @@
     {
      "data": {
       "text/plain": [
-       "NaN"
+       "0.7666185947757449"
       ]
      },
      "execution_count": 16,
@@ -402,6 +423,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# split the data\n",
     "(x_train,y_train), (x_test,y_test) = splitobs((X', digits[\"target\"]), at = 0.6);"
    ]
   },
@@ -574,53 +596,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1078-element Array{Float64,1}:\n",
-       "  0.7594110633517563\n",
-       " -0.24623498001088642\n",
-       "  1.010822574192417\n",
-       " -1.5032925342141898\n",
-       " -1.2518810233735291\n",
-       "  1.010822574192417\n",
-       "  1.010822574192417\n",
-       " -1.2518810233735291\n",
-       "  0.5079995525110956\n",
-       "  1.010822574192417\n",
-       "  1.010822574192417\n",
+       "64-element Array{Float64,1}:\n",
+       "  0.0\n",
+       " -0.33492325878805623\n",
+       " -1.0946321447369363\n",
+       " -2.7856620532488976\n",
+       "  0.5019186187361562\n",
+       "  1.2738456100263678\n",
+       " -0.10892812366527718\n",
+       " -0.12498813188874437\n",
+       " -0.059061117002451896\n",
+       " -0.6238356128858208\n",
+       " -1.9150399000095313\n",
        " -1.7547040450548506\n",
-       "  0.5079995525110956\n",
+       "  1.1961169968191563\n",
        "  ⋮\n",
-       " -1.2518810233735291\n",
-       " -0.7490580016922078\n",
-       " -1.2518810233735291\n",
-       " -0.24623498001088642\n",
-       "  0.5079995525110956\n",
-       "  1.010822574192417\n",
-       " -1.0004695125328684\n",
-       " -0.7490580016922078\n",
-       " -1.0004695125328684\n",
-       "  0.0051765308297742575\n",
-       "  1.010822574192417\n",
-       "  0.7594110633517563"
+       "  1.241737175887366\n",
+       "  0.8690730290873667\n",
+       " -0.7572250303913418\n",
+       " -0.20972674790990398\n",
+       " -0.023589892481053584\n",
+       " -0.29899811837308815\n",
+       " -1.089079932968847\n",
+       " -2.5348143799646126\n",
+       "  0.2413632722575388\n",
+       "  1.5652498480846604\n",
+       " -0.2610630552965269\n",
+       " -0.19595297364240172"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x_train[12,:]"
+    "x_train'[12,:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +660,7 @@
        "setup_init_weights (generic function with 1 method)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +688,7 @@
        "init_tri_values (generic function with 1 method)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +725,7 @@
        "feed_forward (generic function with 1 method)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +768,7 @@
        "calculate_out_layer_delta (generic function with 1 method)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +790,7 @@
        "calculate_hidden_delta (generic function with 1 method)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -777,6 +799,143 @@
     "function calculate_hidden_delta(delta_plus_1,w_l,z_l)\n",
     "    return w_l'*delta_plus_1 .* f′.(z_l)\n",
     "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of iterations = 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "iter_num = 10;\n",
+    "println(\"Number of iterations = $iter_num\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "do_something (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function do_something(nn_structure,X,y,W,b,tri_W,tri_b,avg_cost)\n",
+    "    for i = 1:length(y)\n",
+    "            delta = Dict();\n",
+    "            # perform the feed forward pass and return the stored h and z values, to be used in the\n",
+    "            # gradient descent step\n",
+    "            h, z = feed_forward(X[i, :], W, b);\n",
+    "            # loop from nl-1 to 1 backpropagating the errors\n",
+    "            for l = length(nn_structure):-1:1\n",
+    "                if l == length(nn_structure)\n",
+    "                    delta[l] = calculate_out_layer_delta(y[i,:], h[l], z[l]);\n",
+    "                    avg_cost = avg_cost + norm((y[i,:]-h[l]));\n",
+    "                else\n",
+    "                    if l > 1\n",
+    "                        delta[l] = calculate_hidden_delta(delta[l+1], W[l], z[l])\n",
+    "                    end\n",
+    "                    # triW^(l) = triW^(l) + delta^(l+1) * transpose(h^(l))\n",
+    "                    tri_W[l] = tri_W[l] + delta[l+1]*h[l]'; \n",
+    "                    # trib^(l) = trib^(l) + delta^(l+1)\n",
+    "                    tri_b[l] = tri_b[l] + delta[l+1];\n",
+    "                end\n",
+    "            end\n",
+    "    end\n",
+    "    return avg_cost, tri_W, tri_b\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "do_something_else (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# perform the gradient descent step for the weights in each layer\n",
+    "function do_something_else(nn_structure,W,b,tri_W,tri_b,m,alpha)\n",
+    "    for l = length(nn_structure)-1:-1:1\n",
+    "            W[l] = W[l] +  -alpha * (1.0/m * tri_W[l])\n",
+    "            b[l] = b[l] +  -alpha * (1.0/m * tri_b[l])\n",
+    "    end\n",
+    "    return W, b\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "train_nn (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function train_nn(nn_structure, X, y; iter_num=3000, alpha=0.25)\n",
+    "    W, b = setup_init_weights(nn_structure);\n",
+    "    cnt = 0;\n",
+    "    m = length(y);\n",
+    "    avg_cost_func = [];\n",
+    "    println(\"Starting gradient descent for $iter_num iterations.\")\n",
+    "    while cnt < iter_num\n",
+    "        if cnt%1000 == 0\n",
+    "            println(\"Iteration $cnt of $iter_num iterations.\")\n",
+    "        end\n",
+    "        tri_W, tri_b = init_tri_values(nn_structure);\n",
+    "        avg_cost = 0;\n",
+    "        avg_cost, tri_W, tri_b = do_something(nn_structure,X,y,W,b,tri_W,tri_b,avg_cost);\n",
+    "        W, b = do_something_else(nn_structure,W,b,tri_W,tri_b,m,alpha);\n",
+    "        # complete the average cost calculation\n",
+    "        avg_cost = 1.0/m * avg_cost\n",
+    "        append!(avg_cost_func,avg_cost)\n",
+    "        cnt = cnt + 1;\n",
+    "    end\n",
+    "    return W, b, avg_cost_func\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "W, b, avg_cost_func = train_nn(nn_structure, x_train', yvtrain);"
    ]
   },
   {
