--- a/tryPython.ipynb
+++ b/tryPython.ipynb
@@ -161,7 +161,7 @@
     {
      "data": {
       "text/plain": [
-       "(6, array([0., 0., 0., 0., 0., 0., 1., 0., 0., 0.]))"
+       "(2, array([0., 0., 1., 0., 0., 0., 0., 0., 0., 0.]))"
       ]
      },
      "execution_count": 8,
@@ -305,6 +305,84 @@
     "        avg_cost_func.append(avg_cost)\n",
     "        cnt += 1\n",
     "    return W, b, avg_cost_func"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1078, 64)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1078, 10)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_v_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1078"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(y_v_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "W, b = setup_and_init_weights(nn_structure)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tri_W, tri_b = init_tri_values(nn_structure)"
    ]
   },
   {
