--- a/tutorial04.ipynb
+++ b/tutorial04.ipynb
@@ -21,13 +21,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Info: Precompiling JLD [4138dd39-2aa7-5051-a626-17a0bb65d9c8]\n",
+      "└ @ Base loading.jl:1278\n",
+      "WARNING: replacing module nntutorial.\n"
+     ]
+    }
+   ],
    "source": [
     "using LinearAlgebra, DataFrames, Plots, StatsPlots, LaTeXStrings; pyplot();\n",
     "using Random, PyCall, Statistics, StatsBase, MLDataUtils;\n",
-    "\n",
+    "using JLD;\n",
     "include(\"nntutorial.jl\");"
    ]
   },
@@ -245,6 +255,18 @@
    "source": [
     "# full set of pixel values, each row is a different image\n",
     "digits[\"data\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jl_images = digits[\"images\"];\n",
+    "jl_data = digits[\"data\"];\n",
+    "jl_targets = digits[\"target\"];\n",
+    "save(\"mnist_data.jld\", \"jl_images\", jl_images, \"jl_data\", jl_data, \"jl_targets\", jl_targets);"
    ]
   },
   {
